--- a/SeleniumTest/src/test/java/resources/LoginPageOR.properties
+++ b/SeleniumTest/src/test/java/resources/LoginPageOR.properties
@@ -1,4 +1,4 @@
 # Login Page Object
-txtbx_UserName=.//*[@id='log']
-txtbx_Password=.//*[@id='pwd']
-btn_LogIn=.//*[@id='login']
+txtbx_UserName=//*[@id='email']
+txtbx_Password=//*[@id='password']
+btn_LogIn=//input[@name="submit"]
